--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                             <h2 class="text-black mb-6"><b>About us </b></h2>
                         </div>
                         <div class="img-box">
-                            <img id="firstimage" src="PUBLIC/images/About.jpg" alt="" />
-                            <img src="PUBLIC/images/About.jpg" alt="">
+                            <img id="firstimage" src="images/About.jpg" alt="" />
+                          
                         </div>
                     </div>
                 </div>
